--- a/shopmanager/templates/admin/trades/change_list.html
+++ b/shopmanager/templates/admin/trades/change_list.html
@@ -62,7 +62,7 @@
               </a>
              </li>
              <li>
-              <a href="{% url cl.opts|admin_urlname:'add' %}{% if is_popup %}?_popup=1{% endif %}" class="addlink" target="_blank">
+              <a href="/trades/exchange/add/" class="addlink" target="_blank">
                 新退换货单
               </a>
             </li>
