--- a/shopmanager/templates/trades/exchanges_template.html
+++ b/shopmanager/templates/trades/exchanges_template.html
@@ -131,7 +131,7 @@
 						<td>所属店铺:</td>
 						<td>
 							<select id="id_seller_id" class="selection" style="width:130px;">
-								<option value='' >-----请选择-----</option>
+								<option value='' >-------请选择-------</option>
 								{% for seller in sellers %}
 								<option value='{{ seller.id }}' >{{ seller.nick }}</option>
 								{% endfor %}
