--- a/shopmanager/templates/trades/exchanges_template.html
+++ b/shopmanager/templates/trades/exchanges_template.html
@@ -15,6 +15,8 @@
     }
     body{
     	width:1000px;
+    	background-image: url({{ STATIC_URL }}img/water.jpg);
+  		background-color: #000000;
     }
     .table-bordered {
 	    border: 1px solid #DDD;
@@ -31,7 +33,7 @@
 	}
 	table {
 	    max-width: 100%;
-	    background-color: transparent;
+	    background-color: white;
 	    border-collapse: collapse;
 	    border-spacing: 0;
 	}
