--- a/shopmanager/templates/trades/exchanges_template.html
+++ b/shopmanager/templates/trades/exchanges_template.html
@@ -193,7 +193,7 @@
 					<thead>
 						<tr>
 							<td>序号</td>
-							<td>卖家昵称</td>
+							<td>买家昵称</td>
 							<td>单数</td>
 							<td>付款日期</td>
 							<td>发货日期</td>
