--- a/shopmanager/templates/admin/base_site.html
+++ b/shopmanager/templates/admin/base_site.html
@@ -23,6 +23,10 @@ a.section:link, a.section:visited { color: #666666; }
 {% block footer %}
   <script src="{{ STATIC_URL }}script/trades/base.js" type="text/javascript"></script>
   <script src="{{ STATIC_URL }}script/trades/checkorder.js" type="text/javascript"></script>
-  <script type="text/javascript">new ordercheck.Manager();</script>
+  <script src="{{ STATIC_URL }}script/trades/tradetags.js" type="text/javascript"></script>
+  <script type="text/javascript">
+  	new ordercheck.Manager();
+  	new tradetag.Manager();
+  </script>
 <div id="footer"></div>
 {% endblock %}
