--- a/shopmanager/templates/admin/trades/change_list.html
+++ b/shopmanager/templates/admin/trades/change_list.html
@@ -104,9 +104,27 @@
     </div>
   </div>
 	<script type="text/javascript">
+		if(!document.getElementsByClassName){
+		    document.getElementsByClassName = function(className, element){
+		        var children = (element || document).getElementsByTagName('*');
+		        var elements = new Array();
+		        for (var i=0; i<children.length; i++){
+		            var child = children[i];
+		            var classNames = child.className.split(' ');
+		            for (var j=0; j<classNames.length; j++){
+		                if (classNames[j] == className){ 
+		                    elements.push(child);
+		                    break;
+		                }
+		            }
+		        } 
+		        return elements;
+		    };
+		}
+	
 		var actions = document.getElementsByClassName('actions');
 		if (actions.length>0){
-			var submit_btns = actions[0].getElementsByClassName('button');
+			var submit_btns = document.getElementsByClassName('button',actions[0]);
 			if (submit_btns.length>0){
 				var submit_btn = submit_btns[0];
 				submit_btn.onclick = function(evt){
