fix trade change addr view and check order js

--- a/shopmanager/templates/trades/check_order_template.html
+++ b/shopmanager/templates/trades/check_order_template.html
@@ -34,19 +34,19 @@
 <div class="accordion-heading1">
 <div style="padding: 2px 15px">
 <div class="row-through">
-<div style="margin: 0px; display: inline-block; width: 20%"><label
+<div style="margin: 0px; display: inline-block; width: 22%"><label
 	class="simple-label">收货人: </label><span id="id_receiver">{{ trade.receiver_name }}</span></div>
-<div style="margin: 0px; display: inline-block; width: 25%"><label
+<div style="margin: 0px; display: inline-block; width: 22%"><label
 	class="simple-label">手机: </label><span id="id_mobile">{{ trade.receiver_mobile }}</span></div>
-<div style="margin: 0px; display: inline-block; width: 25%"><label
+<div style="margin: 0px; display: inline-block; width: 22%"><label
 	class="simple-label">固话: </label><span id="id_phone">{{ trade.receiver_phone }}</span></div>
-<div style="margin: 0px; display: inline-block; width: 20%"><label
+<div style="margin: 0px; display: inline-block; width: 22%"><label
 	class="simple-label">邮编: </label><span id="id_zip">{{ trade.receiver_zip }}</span></div>
 </div>
 </div>
 
 <div class="row-through"><label class="simple-label">地址: </label><span id="id_address">{{ trade.receiver_state }}，{{ trade.receiver_city }}，
-{{ trade.receiver_district }}，{{ trade.receiver_address }}，{{ trade.receiver_zip }}</span></div>
+{{ trade.receiver_district }}，{{ trade.receiver_address }}</span></div>
 </div>
 <a id="collapseOne" class="goog-zippy-header goog-zippy-expanded" aria-expanded="true" style="padding: 0px 15px">修改地址››</a></div>
 <div id="addrContent" class="accordion-inner1">
