fix exchanges template

--- a/shopmanager/templates/trades/exchanges_template.html
+++ b/shopmanager/templates/trades/exchanges_template.html
@@ -112,7 +112,7 @@
 						<td colspan="6"></td>
 						<td colspan="2">
 							<button id="id_save_trade" class="btn btn-small btn-success">保存 +</button>&nbsp;&nbsp;
-							<a href="{{ request.path }}?q={{ trade.id }}&type__exact=exchange" class="btn btn-small btn-success">审核 -></a>
+							<a href="/admin/trades/mergetrade/?q={{ trade.id }}&type__exact=exchange" class="btn btn-small btn-success">审核 -></a>
 						</td>
 					</tr>
 				</table>
