product stock manage draft

--- a/shopmanager/templates/admin/trades/change_list.html
+++ b/shopmanager/templates/admin/trades/change_list.html
@@ -66,6 +66,11 @@
                 新退换货单
               </a>
             </li>
+            <li>
+              <a href="/trades/order/statistic/" class="addlink" target="_blank">
+                交易统计
+              </a>
+            </li>
           {% endblock %}
         </ul>
       {% endif %}
