--- a/shopmanager/templates/admin/items/change_list.html
+++ b/shopmanager/templates/admin/items/change_list.html
@@ -55,12 +55,8 @@
       {% if has_add_permission %}
         <ul class="object-tools">
           {% block object-tools-items %}
-          	<li>
-              <a href="/items/product/" class="addlink">淘宝库存管理
-              </a>
-            </li>
             <li>
-              <a href="/items/product/" class="addlink">系统库存管理
+              <a href="/items/product/" class="addlink">库存管理
               </a>
             </li>
             <li>
