--- a/shopmanager/templates/trades/statistic_trade_products.html
+++ b/shopmanager/templates/trades/statistic_trade_products.html
@@ -6,17 +6,61 @@
      <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
     <link href="{{ STATIC_URL }}css/base.less" rel="stylesheet/less" type="text/css" />
-    <script src="{{ STATIC_URL }}script/jquery-1.7.1.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.1/themes/base/jquery-ui.css" />
+	<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+	<script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
+    <style type="text/css">
+		*{ margin:0; padding:0;}
+		ul li{ 
+			list-style:none; 
+			display:inline; 
+			float:left; 
+			margin-left:40px;  
+			margin-top:30px;
+		}
+		input{
+			width:120px;
+		}
+		select{
+			width:120px;
+		}
+	</style>
 </head>
 <body>
 	{% with object.trade_items as trade_items %}
 	<div class="container">
-		<div style="height:100px;">
-			
+		<div style="height:80px;">
+			<form  class="form-inline" method="POST" action="/trades/order/statistic/" >
+			<ul>
+				<li>
+					<label class="control-label" for="sc_by">日期类型:</label>
+					<select name="sc_by" class="selector">
+						<option value="pay" {% if object.sc_by == "pay" %}selected{% endif %}>付款日期</option>
+						<option value="weight" {% if object.sc_by == "weight" %}selected{% endif %}>称重日期</option>
+						<option value="create" {% if object.sc_by == "create" %}selected{% endif %}>生成日期</option>
+					</select>
+				</li>
+				<li>
+					<label class="control-label" for="df">起始日期:</label>
+					<input type="text" id="f_datepicker" name="df" class="datepicker" value="{{ object.df }}"/>
+				</li>
+				<li>
+					<label class="control-label" for="dt">结束日期:</label>
+					<input type="text" id="t_datepicker" name="dt" class="datepicker" value="{{ object.dt }}"/>
+				</li>
+				<li>
+					<label class="control-label" for="outer_id">商家编码:</label>
+					<input type="text" name="outer_id" value="{{ object.outer_id }}"/>
+				</li>
+				<li>
+					<input type="submit" value="查询" class="btn btn-primary"/>
+				</li>
+			</ul>
+			</form>
 		</div>
 		<div id="post-items" style="display:block;">
 		  <fieldset>
-		  	<legend>订单商品统计列表({{ object.df }} ~ {{ object.dt }})</legend>
+		  	<legend>订单商品统计列表</legend>
 			  <table class="table table-bordered table-striped table-condensed">
 			    <tr>
 			      <th>商品编码</th><th>商品名称</th><th>总数量</th><th>规格编码</th><th>商品规格</th><th>数量</th>
@@ -52,4 +96,10 @@
 	</div>	
 	{% endwith %}
 </body>
+<script type="text/javascript">
+	$(function() {
+		 $("#f_datepicker").datepicker({ dateFormat: "yy-mm-dd" });
+		 $("#t_datepicker").datepicker({ dateFormat: "yy-mm-dd" });
+	});
+</script>
 </html>
