add refund product changes

--- a/shopmanager/templates/admin/base_site.html
+++ b/shopmanager/templates/admin/base_site.html
@@ -21,7 +21,7 @@ a.section:link, a.section:visited { color: #666666; }
 {% block nav-global %}{% endblock %}
 
 {% block footer %}
-  <script src="{{ STATIC_URL }}script/trades/base.js" type="text/javascript"></script>
+  <script src="{{ STATIC_URL }}script/base.js" type="text/javascript"></script>
   <script src="{{ STATIC_URL }}script/trades/checkorder.js" type="text/javascript"></script>
   <script src="{{ STATIC_URL }}script/trades/tradetags.js" type="text/javascript"></script>
   <script type="text/javascript">
