--- a/shopmanager/templates/admin/refunds/change_list.html
+++ b/shopmanager/templates/admin/refunds/change_list.html
@@ -57,28 +57,8 @@
         <ul class="object-tools">
           {% block object-tools-items %}
             <li>
-              <a href="{% url cl.opts|admin_urlname:'add' %}{% if is_popup %}?_popup=1{% endif %}" class="addlink">
-                {% blocktrans with cl.opts.verbose_name as name %}新{{ name }}{% endblocktrans %}
-              </a>
-             </li>
-             <li>
-              <a href="/trades/exchange/add/" class="addlink" target="_blank">
-                新退换货单
-              </a>
-            </li>
-            <li>
-              <a href="/trades/order/statistic/" class="addlink" target="_blank">
-                交易统计
-              </a>
-            </li>
-            <li>
-              <a href="/orders/related/orders/" class="addlink" target="_blank">
-                关联销售
-              </a>
-            </li>
-            <li>
-              <a href="/trades/order/outstock/" class="addlink" target="_blank">
-                缺货商品列表
+              <a href="/refunds/product/add/" class="addlink" target="_blank">
+                新退货商品单
               </a>
             </li>
           {% endblock %}
@@ -118,35 +98,4 @@
       </form>
     </div>
   </div>
-	<script type="text/javascript">
-		if(!document.getElementsByClassName){
-		    document.getElementsByClassName = function(className, element){
-		        var children = (element || document).getElementsByTagName('*');
-		        var elements = new Array();
-		        for (var i=0; i<children.length; i++){
-		            var child = children[i];
-		            var classNames = child.className.split(' ');
-		            for (var j=0; j<classNames.length; j++){
-		                if (classNames[j] == className){ 
-		                    elements.push(child);
-		                    break;
-		                }
-		            }
-		        } 
-		        return elements;
-		    };
-		}
-	
-		var actions = document.getElementsByClassName('actions');
-		if (actions.length>0){
-			var submit_btns = document.getElementsByClassName('button',actions[0]);
-			if (submit_btns.length>0){
-				var submit_btn = submit_btns[0];
-				submit_btn.onclick = function(evt){
-					submit_btn.style.display = "none";
-				};
-			}
-		}
-		
-	</script> 
 {% endblock %}
