--- a/shopmanager/templates/refunds/refund_products.html
+++ b/shopmanager/templates/refunds/refund_products.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html >
   <head>
-    <title>{% block title %}{% endblock %}</title>
+    <title>退货商品管理</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
      <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
@@ -73,91 +73,45 @@
 	}
     </style>
   </head>
-{% load trade_tags %} 
-{% with trade=object.trade sellers=object.sellers %}
   <body>
 	<div class="content-main">
 		<fieldset>
-			<legend><h1 class="head-title" >退换货单</h1></legend>
-			
+			<legend><h1 class="head-title" >退回商品录入单</h1></legend>
 			<div class="content-base-info">
-				<div><input type="hidden" id="id_exchange_trade" value="{{ trade.id }}" /></div>
 				<table class="table table-bordered table-striped table-condensed">
 					<tr>
-						<td>所属店铺:</td>
-						<td>
-							<select id="id_seller_id" class="selection" style="width:130px;">
-								<option value='' >-------请选择-------</option>
-								{% for seller in sellers %}
-								<option value='{{ seller.id }}' >{{ seller.nick }}</option>
-								{% endfor %}
-							</select>
-						</td>
-						<td>会员昵称:</td><td><input type="text" id="id_buyer_nick" class="simple-text" /></td>
+						<td>交易ID:</td><td><input type="text" id="id_trade_id" class="simple-text" /></td>
+						<td>买家昵称:</td><td><input type="text" id="id_buyer_nick" class="simple-text" /></td>
 						<td>手机:</td><td><input type="text" id="id_receiver_mobile" class="simple-text" /></td>
 						<td>固话:</td><td><input type="text" id="id_receiver_phone" class="simple-text" /></td>
 					</tr>
 					<tr>
-						<td>收货人:</td><td><input type="text" id="id_receiver_name" class="simple-text" /></td>
-						<td>省:</td><td><input type="text" id="id_receiver_state" class="simple-text" /></td>
-						<td>市:</td><td><input type="text" id="id_receiver_city" class="simple-text" /></td>
-						<td>区:</td><td><input type="text" id="id_receiver_district" class="simple-text" /></td>
-					</tr>
-					<tr>
-						<td>详细地址:</td><td colspan="3"><input type="text" id="id_receiver_address" class="simple-text" style="width:400px;" /></td>
-						<td>退货快递名称:</td><td><input type="text" id="id_return_company_name" class="simple-text" /></td>
-						<td>退货快递单号:</td><td><input type="text" id="id_return_out_sid" class="simple-text" /></td>
-					</tr>
-					<tr>
-						<td colspan="6"></td>
-						<td colspan="2">
-							<button id="id_save_trade" class="btn btn-small btn-success">保存 +</button>&nbsp;&nbsp;
-							<a href="/admin/trades/mergetrade/?q={{ trade.id }}&type__exact=exchange" class="btn btn-small btn-success">审核 -></a>
-						</td>
+						<td>退货快递:</td><td><input type="text" id="id_return_company_name" class="simple-text" /></td>
+						<td>退货单号:</td><td><input type="text" id="id_return_out_sid" class="simple-text" /></td>
+						<td>备注:</td><td><textarea id="id-return-memo" class="simple-text" rows="2" cols="40"></textarea></td>
+						<td></td><td><button id="id_clear_btn" class="btn btn-small btn-success">重填</button><td>
 					</tr>
 				</table>
 			</div>
 			<hr/>
-			<div class="order-content">
-				<div class="up-orders-panel">
-					<h3 class="head-title" id="id-return-head">
-						<img src="{{ STATIC_URL }}img/tri_right.png" style="cursor:pointer;margin-right:5px;"></img> 退货单</h3>
-					<div id="id-return-goods">
-						<table id="id-return-table" class="table table-bordered table-striped table-condensed">
+			<div class="product-content">
+				<div class="product-panel">
+					<h3 class="head-title" id="id-refund-head">
+						<img src="{{ STATIC_URL }}img/tri_right.png" style="cursor:pointer;margin-right:5px;"></img>退回商品列表</h3>
+					<div id="id-refund-goods">
+						<table id="id-refund-table" class="table table-bordered table-striped table-condensed">
 							<thead>
 								<tr>
-									<td>编号</td>
-									<td>商家编码</td>
+									<td>序号</td>
+									<td>交易ID</td>
+									<td>买家ID</td>
+									<td>手机</td>
+									<td>固话</td>
+									<td>物流单号</td>
+									<td>物流公司</td>
 									<td>商品简称</td>
 									<td>规格</td>
 									<td>数量</td>
-									<td>单价</td>
-									<td>缺货</td>
-									<td>类型</td>
-									<td>操作</td>
-								</tr>
-							</thead>
-							<tbody>
-							</tbody>
-						</table>
-					</div>
-				</div>
-				<hr/>
-				<div class="down-orders-panel">
-					<h3 class="head-title" id="id-change-head">
-						<img src="{{ STATIC_URL }}img/tri_right.png" style="cursor:pointer;margin-right:5px;"></img> 换货单</h3>
-					<div id="id-change-goods">
-						<table id="id-change-table" class="table table-bordered table-striped table-condensed">
-							<thead>
-								<tr>
-									<td>编号</td>
-									<td>商家编码</td>
-									<td>商品简称</td>
-									<td>规格</td>
-									<td>数量</td>
-									<td>单价</td>
-									<td>缺货</td>
-									<td>类型</td>
 									<td>操作</td>
 								</tr>
 							</thead>
@@ -173,7 +127,7 @@
 					<input type="text" id="id_prod_q" class="search-query"  placeholder="商品搜索" />
 				</div>
 				<div class="navbar-search trade-search">
-					<input type="text" id="id_trade_q" class="search-query"  placeholder="订单搜索" />
+					<input type="text" id="id_trade_q" class="search-query"  placeholder="退货单搜索" />
 				</div>
 			</div>
 			<hr/>
@@ -183,10 +137,11 @@
 						<tr>
 							<td>序号</td>
 							<td>商家编码</td>
-							<td style="width:250px;">商品简称</td>
+							<td style="width:200px;">商品简称</td>
 							<td>规格</td>
 							<td>数量</td>
 							<td>单价</td>
+							<td>二次销售</td>
 							<td>操作</td>
 						</tr>
 					</thead>
@@ -200,13 +155,13 @@
 						<tr>
 							<td>序号</td>
 							<td>买家昵称</td>
-							<td>单数</td>
-							<td>付款日期</td>
-							<td>发货日期</td>
-							<td>收货人</td>
-							<td style="width:200px;">收货地址及电话</td>
-							<td>淘宝状态</td>
-							<td>系统状态</td>
+							<td style="width:150px;">商品标题</td>
+							<td>规格</td>
+							<td>数量</td>
+							<td>退款日期</td>
+							<td>联系方式</td>
+							<td>退货物流</td>
+							<td>退货状态</td>
 							<td>操作</td>
 						</tr>
 					</thead>
@@ -217,12 +172,10 @@
 			<hr/>
 		</fieldset>
 	</div>
-	
-</body>
-{% endwith %}
+  </body>
 <script src="{{ STATIC_URL }}script/base.js"></script>
-<script src="{{ STATIC_URL }}script/trades/exchange.js"></script>
+<script src="{{ STATIC_URL }}script/refund/refund.js"></script>
 <script type="text/javascript">
-	 new exchange.Manager();
+	 new refund.Manager();
 </script>
 </html>
