--- a/shopmanager/templates/related_orders_template.html
+++ b/shopmanager/templates/related_orders_template.html
@@ -2,7 +2,7 @@
         "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-    <title>数据图表</title>
+    <title>关联销售</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="{{ STATIC_URL }}css/table.less" rel="stylesheet/less" type="text/css">
@@ -10,10 +10,54 @@
     <script src="{{ STATIC_URL }}script/jquery-1.7.1.min.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-popover.js" type="text/javascript"></script>
-    
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.1/themes/base/jquery-ui.css" />
+	<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+	<script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
+    <style type="text/css">
+		*{ margin:0; padding:0;}
+		ul li{ 
+			list-style:none; 
+			display:inline; 
+			float:left; 
+			margin-left:20px;  
+			margin-top:30px;
+		}
+		input{
+			width:100px;
+		}
+		select{
+			width:120px;
+		}
+	</style>
 </head>
 <body>
 	{% if object %}
+	<div class="container">
+	<div style="height:80px;">
+			<form  class="form-inline" method="POST" action="/orders/related/orders/" >
+			<ul>
+				<li>
+					<label class="control-label" for="df">起始日期:</label>
+					<input type="text" id="f_datepicker" name="df" class="datepicker" value="{{ object.df }}"/>
+				</li>
+				<li>
+					<label class="control-label" for="dt">结束日期:</label>
+					<input type="text" id="t_datepicker" name="dt" class="datepicker" value="{{ object.dt }}"/>
+				</li>
+				<li>
+					<label class="control-label" for="outer_id">(商品/商家)编码:</label>
+					<input type="text" name="outer_id" value="{{ object.outer_id }}"/>
+				</li>
+				<li>
+					<label class="control-label"  for="limit">显示条数:</label>
+					<input type="text" name="limit" style="width:20px;" value="{{ object.limit }}"/>
+				</li>
+				<li>
+					<input type="submit" value="查询" class="btn btn-primary"/>
+				</li>
+			</ul>
+			</form>
+	</div>
     <div class='w3c_tables'>
         <table align="center">
 	        <thead style="background-color:#2C7400">
@@ -22,7 +66,7 @@
 	        <td>商品名称</td>
 	        <td>组合商品销售数量</td>
 	        </thead>
-	        {% for item in object %}
+	        {% for item in object.order_items %}
 	            <tr >
 	            	<td >{{ item.0 }}</td>
 					<td ><img src="{{ item.1 }}" width="40px" heigth="40px"></img></td>
@@ -35,5 +79,12 @@
     {% else %}
     <div>该商品没有销售数据<div>
     {% endif %}
+   </div>
 </body>
+<script type="text/javascript">
+	$(function() {
+		 $("#f_datepicker").datepicker({ dateFormat: "yy-mm-dd" });
+		 $("#t_datepicker").datepicker({ dateFormat: "yy-mm-dd" });
+	});
+</script>
 </html>
