--- a/shopmanager/templates/trades/review_order_template.html
+++ b/shopmanager/templates/trades/review_order_template.html
@@ -88,15 +88,11 @@
 	    display:inline;
 	}
 	
-	.thumbnails1 {
-	    margin-left: -20px;
-	    list-style: none;
-	    height:18px;
-	}
-	
-	.thumbnails1 > li {
+	.thumbnails1 li {
+		list-style:none;
 	    float: left;
 	    margin-left: 20px;
+	    display:inline;
 	}
 	.badge1 {
 	    padding: 1px 9px 2px;
@@ -106,7 +102,7 @@
 	}
 	
 	.badge1 {
-	    font-size: 10.998px;
+	    font-size: 20px;
 	    font-weight: bold;
 	    line-height: 14px;
 	    color: white;
@@ -234,10 +230,10 @@
 				{% else %}
 				<button id="id-review-order-btn" class="btn-large" disabled="disabled">订单已复审</button>
 				{% endif %}
-			{% elif not trade.can_review and trade.sys_status == "WAIT_CHECK_BARCODE" %}
+			{% elif not trade.can_review and trade.sys_status == "WAIT_CHECK_BARCODE" and trade.reason_code != '' %}
 			<button id="id-review-order-btn" class="btn-large" disabled="disabled">客服未处理，暂不能复审</button>
 			{% else%}
-			<button id="id-review-order-btn" class="btn-large" disabled="disabled">该页面只能修改快递单号</button>
+			<button id="id-review-order-btn" class="btn-large" disabled="disabled">订单无须复审</button>
 			{% endif %}
 		</div>
 	</div>
